# bitranslit

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: audit.yml  ci.yml
bitranslit/: Cargo.toml  build.rs
bitranslit/benches/: translit.rs
bitranslit/data/bg/: reverse_specific_mapping.csv
bitranslit/data/el/: mapping.csv  reverse_specific_mapping.csv
bitranslit/data/hy/: pre_processor_mapping.csv  reverse_specific_mapping.csv
bitranslit/data/l1/: mapping.csv
bitranslit/data/mk/: pre_processor_mapping.csv
bitranslit/data/ru/: pre_processor_mapping.csv
bitranslit/data/sr/: mapping.csv
bitranslit/src/: lib.rs  transliterator.rs
bitranslit/src/languages/: armenian.rs  bulgarian.rs  greek.rs  latin1.rs  makedonian.rs  russian.rs  serbian.rs  ukranian.rs
bitranslit/src/standards/bg/: pre_processor_mapping.in
bitranslit/src/standards/el/: pre_processor_mapping.in  reverse_specific_mapping.in
bitranslit/src/standards/hy/: mapping.in  pre_processor_mapping.in
bitranslit/src/standards/l1/: mapping.in
bitranslit/src/standards/ru/: mapping.in  pre_processor_mapping.in  reverse_specific_mapping.in
bitranslit_derive/: Cargo.toml
bitranslit_derive/src/: lib.rs
data/bg/: streamlined.csv
data/ru/: gost779.csv
data/ua/: gost779b.csv
src/: lib.rs
src/standards/: bg.rs  by.rs  ru.rs  ua.rs
transliteratsiya/: Cargo.toml  build.rs
transliteratsiya/benches/: translit.rs
transliteratsiya/data/bg/: mapping.csv  pre_processor_mapping.csv
transliteratsiya/data/by/: gost779b.csv
transliteratsiya/data/el/: pre_processor_mapping.csv
transliteratsiya/data/hy/: mapping.csv  pre_processor_mapping.csv  reverse_specific_pre_processor_mapping.csv
transliteratsiya/data/l1/: reverse_specific_mapping.csv  reverse_specific_pre_processor_mapping.csv
transliteratsiya/data/mk/: mapping.csv
transliteratsiya/data/ru/: mapping.csv  pre_processor_mapping.csv  reverse_specific_mapping.csv
transliteratsiya/data/sr/: pre_processor_mapping.csv
transliteratsiya/data/ua/: mapping.csv  pre_processor_mapping.csv  reverse_specific_mapping.csv
transliteratsiya/src/: languages.rs  lib.rs  standards.rs  transliterator.rs
transliteratsiya/src/languages/: armenian.rs  bulgarian.rs  greek.rs  latin1.rs  makedonian.rs  russian.rs  serbian.rs  ukranian.rs
transliteratsiya/src/standards/: bg.in  by.in  ru.in  ua.in
transliteratsiya/src/standards/bg/: mapping.in  pre_processor_mapping.in  reverse_specific_mapping.in
transliteratsiya/src/standards/el/: mapping.in
transliteratsiya/src/standards/hy/: mapping.in  pre_processor_mapping.in  reverse_specific_mapping.in  reverse_specific_pre_processor_mapping.in
transliteratsiya/src/standards/l1/: reverse_specific_mapping.in  reverse_specific_pre_processor_mapping.in
transliteratsiya/src/standards/mk/: mapping.in  pre_processor_mapping.in
transliteratsiya/src/standards/ru/: mapping.in  pre_processor_mapping.in
transliteratsiya/src/standards/sr/: mapping.in  pre_processor_mapping.in
transliteratsiya/src/standards/ua/: mapping.in  pre_processor_mapping.in  reverse_specific_mapping.in
transliteratsiya_derive/: Cargo.toml
transliteratsiya_derive/src/: lib.rs
