[package]
name = "bitranslit"
version = "0.1.0"
edition = "2021"
description = "Bi-directional transliterator for Rust. Transliterates strings according to the rules specified in the language packs."
keywords = [
  "transliteration",
  "transliterator",
  "transliteration-armenian",
  "transliteration-bulgarian",
  "transliteration-greek",
  "transliteration-macedonian",
  "transliteration-russian",
  "transliteration-serbian",
  "transliteration-ukranian"
]
license = "LGPL-2.1-or-later"
repository = "https://github.com/critocrito/bitranslit"
homepage = "https://github.com/critocrito/bitranslit"
readme = "../README.md"

[dependencies]
bitranslit_derive = { path = "../bitranslit_derive" }
lazy_static = "1.4"
derive_builder = "0.12.0"

[build-dependencies]
csv = "1.2.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "translit"
harness = false
