[package]
name = "bitranslit"
version = "0.1.0"
edition = "2021"
description = "Bi-directional transliterator for Rust. Transliterates strings according to the rules specified in the language packs."
keywords = [
  "transliteration",
  "transliterator",
  "bi-directional"
]
categories = [
  "text-processing",
  "internationalization",
  "encoding"
]
license = "LGPL-2.1-or-later"
repository = "https://github.com/critocrito/bitranslit"
homepage = "https://github.com/critocrito/bitranslit"
readme = "../README.md"
documentation = "https://docs.rs/bitranslit"

[dependencies]
bitranslit_derive = { path = "../bitranslit_derive", version = "0.1.0" }
lazy_static = "1.4"
derive_builder = "0.12.0"

[build-dependencies]
csv = "1.2.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "translit"
harness = false
