[package]
name = "bitranslit_derive"
version = "0.3.0"
edition = "2021"
description = "Macros for bitranslit, the bi-directional transliterator for Rust."
keywords = [
  "transliteration",
  "transliterator",
  "bi-directional"
]
categories = [
  "text-processing",
  "internationalization",
  "encoding"
]
license = "LGPL-2.1-or-later"
repository = "https://github.com/critocrito/bitranslit"
homepage = "https://github.com/critocrito/bitranslit"
readme = "../README.md"
documentation = "https://docs.rs/bitranslit_derive"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"]}
