[package]
name = "transliteratsiya"
version = "0.1.0"
edition = "2021"

[dependencies]
transliteratsiya_derive = { path = "../transliteratsiya_derive" }

[build-dependencies]
csv = "1.2.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "translit"
harness = false
