[package]
name = "transliteratsiya"
version = "0.1.0"
edition = "2021"
description = "Bi-directional transliterator for Rust. Transliterates strings according to the rules specified in the language packs."

[dependencies]
transliteratsiya_derive = { path = "../transliteratsiya_derive" }
lazy_static = "1.4"

[build-dependencies]
csv = "1.2.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "translit"
harness = false
