[package]
name = "transliteratsiya"
version = "0.1.0"
edition = "2021"
description = "Bi-directional transliterator for Rust. Transliterates strings according to the rules specified in the language packs."
keywords = [
  "transliteration",
  "transliterator",
  "transliteration-armenian",
  "transliteration-bulgarian",
  "transliteration-russian",
  "transliteration-ukranian"
]
license = "LGPL-2.1-or-later"
repository = "https://github.com/critocrito/transliteratsiya"
homepage = "https://github.com/critocrito/transliteratsiya"
readme = "../README.md"

[dependencies]
transliteratsiya_derive = { path = "../transliteratsiya_derive" }
lazy_static = "1.4"
derive_builder = "0.12.0"

[build-dependencies]
csv = "1.2.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "translit"
harness = false
