[package]
name = "transliteratsiya_derive"
version = "0.1.0"
edition = "2021"
description = "Macros for transliteratsiya, the bi-directional transliterator for Rust."
keywords = [
  "transliteration",
  "transliterator",
  "transliteration-armenian",
  "transliteration-bulgarian",
  "transliteration-russian",
  "transliteration-ukranian"
]
license = "LGPL-2.1-or-later"
repository = "https://github.com/critocrito/transliteratsiya"
homepage = "https://github.com/critocrito/transliteratsiya"
readme = "../README.md"


[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"]}
